# paper-index-tool

./: .gitleaks.toml  .mise.toml  CLAUDE.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: generate-paper-entry.md  validate-paper.md
.github/workflows/: publish.yml
paper_index_tool/: __init__.py  cli.py  completion.py  logging_config.py  models.py  search.py  settings.py  utils.py
paper_index_tool/storage/: __init__.py  paths.py  registry.py
paper_index_tool/telemetry/: __init__.py  config.py  decorators.py  exporters.py  service.py
paper_index_tool/vector/: __init__.py  chunking.py  embeddings.py  errors.py  registry.py  search.py
plugins/paper-index-tool/.claude-plugin/: plugin.json
plugins/paper-index-tool/commands/: help.md
plugins/paper-index-tool/skills/paper-index-tool/: SKILL.md
references/: README.md  citation-validation-feature.md  docker-compose.yml  feature.md  generate-entries-prompt.md  manual.md  marketplace-plugin-guide.md  media-and-ai-tracking-feature.md  multi-index-vector-search.md  vector-search-feature.md
references/alloy/: config.alloy
references/grafana/provisioning/datasources/: datasources.yml
references/loki/: loki-config.yml
references/prometheus/: prometheus.yml
references/tempo/: tempo.yml
tests/: __init__.py  test_chapter_grouping.py  test_utils.py
